[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-dna-toolkit"
version = "1.0.0"
description = "DNA sequence alignment, edit distance, and Burrows-Wheeler exact matching toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Advanced DNA Toolkit Contributors"}
]
keywords = ["bioinformatics", "dna", "alignment", "smith-waterman", "burrows-wheeler-transform"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.scripts]
dna-toolkit = "dna_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

